--- a/Day01_Python_Review_and_Intro_to_Pandas.ipynb
+++ b/Day01_Python_Review_and_Intro_to_Pandas.ipynb
@@ -217,7 +217,7 @@
         "1. From Google Drive: https://drive.google.com/\n",
         "> You may need to 'connect more apps', and select Google Colaboratory.\n",
         "<div>\n",
-        "<img src=\"https://github.com/alimoorreza/CS167-fall24-notes/blob/main/notes/images/day01_p2_newcolab1.png?raw=1\"/ width=500>\n",
+        "<img src=\"https://github.com/alimoorreza/CS167-fall24-notes/blob/main/notes/images/day01_p2_newcolab1.png?raw=true\"/ width=500>\n",
         "</div>\n"
       ]
     },
