--- a/Day01_Python_Review_and_Intro_to_Pandas.ipynb
+++ b/Day01_Python_Review_and_Intro_to_Pandas.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/alimoorreza/CS167-fall24-notes/blob/main/Day01_Python_Review_and_Intro_to_Pandas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "YanE7gN2ge_W"
       },
       "source": [
@@ -572,7 +582,8 @@
       "version": "3.8.3"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
