--- a/Day01_Python_Review_and_Intro_to_Pandas.ipynb
+++ b/Day01_Python_Review_and_Intro_to_Pandas.ipynb
@@ -75,9 +75,19 @@
         "# Intro to Google Colab:\n",
         "\n",
         "## What is Google colab?\n",
-        "Colab is a great browser-based tool for developing IPython Notebooks. Colab allows anybody to write and execute Python code through the browser, and is especially well suited to machine learning, data analysis and education.\n",
+        "- Colab is a great browser-based tool for developing IPython Notebooks. Colab allows anybody to write and execute Python code through the browser, and is especially well suited to machine learning, data analysis and education.\n",
         "\n",
-        "It makes it really easy to open up someone else's notebook and run it yourself. It also makes it easy to annotate and explain what is happening in the code using Markdown cells."
+        "- It makes it really easy to open up someone else's notebook and run it yourself. It also makes it easy to annotate and explain what is happening in the code using Markdown cells.\n",
+        "\n",
+        "## Other tools?\n",
+        "- We will be using Google Colab.\n",
+        "  - Access to GPUs (Graphics Processing Units), which are very helpful for working with deep learning models. We will explore this later in the semester.\n",
+        "  - Pre-installed packages are available, but you can also install additional ones.\n",
+        "  - A cloud-based service provided by Google that runs on their servers.\n",
+        "- You could also use other interactive tools such as **Jupyter Notebooks** (which runs locally, and pre-dates Colab). I use that for my research.\n",
+        "  - you can run your code offline (without an internet connection).\n",
+        "  - you can install your Python packages and have complete control over the libraries.\n",
+        "  - **Caveats:** you need to install Python and Jupyter in your machine/laptop"
       ]
     },
     {
@@ -85,14 +95,11 @@
       "metadata": {
         "id": "rNQOo80Hge_e"
       },
-      "source": [
-        "## How is Colab different from what you're using right now?\n",
-        "- I will be using both Jupyter Notebooks (which runs locally, and pre-dates Colab) and Google Colab."
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "F_qpy4Knge_e",
         "outputId": "c906deb5-99ea-4a14-ed1d-f580c2c61282",
@@ -218,7 +225,8 @@
         "> You may need to 'connect more apps', and select Google Colaboratory.\n",
         "<div>\n",
         "<img src=\"https://github.com/alimoorreza/CS167-fall24-notes/blob/main/notes/images/day01_p2_newcolab1.png?raw=true\"/ width=500>\n",
-        "</div>\n"
+        "</div>\n",
+        "\n"
       ]
     },
     {
