--- a/Day07_Normalization_and_w_knn.ipynb
+++ b/Day07_Normalization_and_w_knn.ipynb
@@ -3576,6 +3576,75 @@
     {
       "cell_type": "code",
       "source": [
+        "# create a new sample (experimenting without normalization)\n",
+        "new_iris = {}\n",
+        "new_iris['petal length']  = 5.1\n",
+        "new_iris['sepal length']  = 7.2\n",
+        "new_iris['petal width']   = 1.5\n",
+        "new_iris['sepal width']   = 2.5\n",
+        "\n",
+        "print(\"Not normalized:\")\n",
+        "print('unweighted kNN, k=3:', knn(new_iris, iris, 3))\n",
+        "print('unweighted kNN, k=5:', knn(new_iris, iris, 5))\n",
+        "print('weighted kNN,   k=3:', weighted_knn(new_iris, iris, 3))\n",
+        "print('weighted kNN,   k=5:', weighted_knn(new_iris, iris, 5))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RYzy1O4uOPog",
+        "outputId": "102f36a1-8ef1-4bf5-de74-6e2ae196db6d"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Not normalized:\n",
+            "unweighted kNN, k=3: Iris-versicolor\n",
+            "unweighted kNN, k=5: Iris-versicolor\n",
+            "Nearest k samples in the training data:\n",
+            "    sepal length  sepal width  petal length  petal width          species  \\\n",
+            "76           6.8          2.8           4.8          1.4  Iris-versicolor   \n",
+            "52           6.9          3.1           4.9          1.5  Iris-versicolor   \n",
+            "77           6.7          3.0           5.0          1.7  Iris-versicolor   \n",
+            "\n",
+            "    distances   weights  \n",
+            "76   0.591608  2.857143  \n",
+            "52   0.700000  2.040816  \n",
+            "77   0.741620  1.818182  \n",
+            "species\n",
+            "Iris-versicolor    6.716141\n",
+            "Name: weights, dtype: float64\n",
+            "weighted kNN,   k=3: Iris-versicolor\n",
+            "Nearest k samples in the training data:\n",
+            "     sepal length  sepal width  petal length  petal width          species  \\\n",
+            "76            6.8          2.8           4.8          1.4  Iris-versicolor   \n",
+            "52            6.9          3.1           4.9          1.5  Iris-versicolor   \n",
+            "77            6.7          3.0           5.0          1.7  Iris-versicolor   \n",
+            "50            7.0          3.2           4.7          1.4  Iris-versicolor   \n",
+            "129           7.2          3.0           5.8          1.6   Iris-virginica   \n",
+            "\n",
+            "     distances   weights  \n",
+            "76    0.591608  2.857143  \n",
+            "52    0.700000  2.040816  \n",
+            "77    0.741620  1.818182  \n",
+            "50    0.836660  1.428571  \n",
+            "129   0.866025  1.333333  \n",
+            "species\n",
+            "Iris-versicolor    8.144712\n",
+            "Iris-virginica     1.333333\n",
+            "Name: weights, dtype: float64\n",
+            "weighted kNN,   k=5: Iris-versicolor\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def z_score(columns, data):\n",
         "    \"\"\"\n",
         "    takes in a list of columns to normalize using the z-score method\n",
@@ -3593,40 +3662,27 @@
         "    for col in columns:\n",
         "\n",
         "        # get the mean and std\n",
+        "        # your code\n",
+        "        # ...\n",
         "\n",
         "        # keep appending the mean, std into the lists initilized above\n",
+        "        # your code\n",
+        "        # ...\n",
         "\n",
         "        # z score\n",
+        "        # your code\n",
+        "        # ...\n",
         "\n",
         "        # replace the column with the z-score\n",
+        "        # your code\n",
+        "        # ...\n",
+        "\n",
         "\n",
         "\n",
         "    return normalized_data, mean_list, std_list"
       ],
       "metadata": {
         "id": "vOGSY4S005PT"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# create a new sample\n",
-        "new_iris = {}\n",
-        "new_iris['petal length']  = 5.1\n",
-        "new_iris['sepal length']  = 7.2\n",
-        "new_iris['petal width']   = 1.5\n",
-        "new_iris['sepal width']   = 2.5\n",
-        "\n",
-        "print(\"Not normalized:\")\n",
-        "print('unweighted kNN, k=3:', knn(new_iris, iris, 3))\n",
-        "print('unweighted kNN, k=5:', knn(new_iris, iris, 5))\n",
-        "print('weighted kNN,   k=3:', weighted_knn(new_iris, iris, 3))\n",
-        "print('weighted kNN,   k=5:', weighted_knn(new_iris, iris, 5))"
-      ],
-      "metadata": {
-        "id": "FRw1CokRK2-F"
       },
       "execution_count": null,
       "outputs": []
