--- a/Day19_PyTorch_basics.ipynb
+++ b/Day19_PyTorch_basics.ipynb
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "LwgBlHEvJDEJ"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data = [[1, 2, 3],[10, 20, 30]]\n",
+        "data = [[1, 2, 3], [10, 20, 30] ]\n",
         "my_tensor1 = torch.tensor(data)\n",
         "print(my_tensor1)"
       ],
@@ -88,10 +88,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "WFPjo0Q0JsOQ",
-        "outputId": "159ce079-b2ff-47e8-8fd1-bcefdcc01519"
+        "id": "LCkrlPFFMrnq",
+        "outputId": "00126456-389d-427b-e37f-2b923cc3deea"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,18 +106,18 @@
     {
       "cell_type": "code",
       "source": [
-        "data_np    = np.array([[1, 2, 3],[10, 20, 30], [100, 200, 300]])\n",
-        "my_tensor2 = torch.from_numpy(data_np)\n",
-        "print(my_tensor2)"
+        "data_np_array = np.array( [[1, 2, 3], [10, 20, 30], [100, 200, 300]] )\n",
+        "my_tensor2 = torch.from_numpy(data_np_array)\n",
+        "print(my_tensor2)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "igwn00ECJ998",
-        "outputId": "ee047883-8351-45bc-f6c8-98a26906193e"
+        "id": "9Pls6h2UM-40",
+        "outputId": "127c19d1-eefd-4cad-ed38-e986742304a4"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,6 +168,31 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "my_data_np = my_tensor1.numpy()\n",
+        "print(my_data_np)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AhxHPzPFNQ92",
+        "outputId": "dc0a3dda-7eb6-453a-9ac0-6f8af96d84e6"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  3]\n",
+            " [10 20 30]]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "__Random and fixed initialization of Tensors__:\n",
@@ -186,34 +211,29 @@
     {
       "cell_type": "code",
       "source": [
-        "torch.manual_seed(0)\n",
-        "my_tensor_random = torch.rand( (10, 3) )\n",
-        "print('random tensor of shape (2-rows, 3-columns): \\n', my_tensor_random)"
+        "torch.manual_seed(1) # make the random number generation reproducible by setting a fixed seed value\n",
+        "my_tensor_random = torch.rand( (5, 2) )\n",
+        "print('random tensor of shape (5-rows, 2-columns): \\n', my_tensor_random)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "NXW-hV5KLWyP",
-        "outputId": "4ec0a5b3-6459-4473-f82f-dfe8f3e2118f"
+        "id": "V3JFsYbSNclN",
+        "outputId": "60ed46a4-b903-4de7-c4ab-220ef6dc6b78"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "random tensor of shape (2-rows, 3-columns): \n",
-            " tensor([[0.4963, 0.7682, 0.0885],\n",
-            "        [0.1320, 0.3074, 0.6341],\n",
-            "        [0.4901, 0.8964, 0.4556],\n",
-            "        [0.6323, 0.3489, 0.4017],\n",
-            "        [0.0223, 0.1689, 0.2939],\n",
-            "        [0.5185, 0.6977, 0.8000],\n",
-            "        [0.1610, 0.2823, 0.6816],\n",
-            "        [0.9152, 0.3971, 0.8742],\n",
-            "        [0.4194, 0.5529, 0.9527],\n",
-            "        [0.0362, 0.1852, 0.3734]])\n"
+            "random tensor of shape (5-rows, 2-columns): \n",
+            " tensor([[0.7576, 0.2793],\n",
+            "        [0.4031, 0.7347],\n",
+            "        [0.0293, 0.7999],\n",
+            "        [0.3971, 0.7544],\n",
+            "        [0.5695, 0.4388]])\n"
           ]
         }
       ]
@@ -221,33 +241,29 @@
     {
       "cell_type": "code",
       "source": [
-        "my_tensor_fixed = 14*(torch.ones( (10, 3) ))\n",
-        "print('tensor initialized of shape (2-rows, 3-columns) with a value of 10 in all entries: \\n', my_tensor_fixed)"
+        "torch.manual_seed(2) # changing the seed value will create different sets of random numbers\n",
+        "my_tensor_random = torch.rand( (5, 2) )\n",
+        "print('random tensor of shape (5-rows, 2-columns): \\n', my_tensor_random)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "68FIye8OLsNe",
-        "outputId": "701a7a83-fe62-4911-c753-44b3b16beb22"
+        "id": "SzldtS7nN5U0",
+        "outputId": "e33c3d6d-2138-4ba0-847a-405640eb0959"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor initialized of shape (2-rows, 3-columns) with a value of 10 in all entries: \n",
-            " tensor([[14., 14., 14.],\n",
-            "        [14., 14., 14.],\n",
-            "        [14., 14., 14.],\n",
-            "        [14., 14., 14.],\n",
-            "        [14., 14., 14.],\n",
-            "        [14., 14., 14.],\n",
-            "        [14., 14., 14.],\n",
-            "        [14., 14., 14.],\n",
-            "        [14., 14., 14.],\n",
-            "        [14., 14., 14.]])\n"
+            "random tensor of shape (5-rows, 2-columns): \n",
+            " tensor([[0.6147, 0.3810],\n",
+            "        [0.6371, 0.4745],\n",
+            "        [0.7136, 0.6190],\n",
+            "        [0.4425, 0.0958],\n",
+            "        [0.6142, 0.0573]])\n"
           ]
         }
       ]
@@ -255,17 +271,47 @@
     {
       "cell_type": "code",
       "source": [
-        "my_tensor_zero = torch.zeros((10, 3))\n",
+        "# torch.manual_seed(2) # remove this line, and the code will generate different values each time you run it\n",
+        "my_tensor_random = torch.rand( (5, 2) )\n",
+        "print('random tensor of shape (5-rows, 2-columns): \\n', my_tensor_random)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cPzjqu50No8w",
+        "outputId": "4c578a95-2856-4ff9-ceb0-ce9749c64002"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "random tensor of shape (5-rows, 2-columns): \n",
+            " tensor([[0.6397, 0.9743],\n",
+            "        [0.8300, 0.0444],\n",
+            "        [0.0246, 0.2588],\n",
+            "        [0.9391, 0.4167],\n",
+            "        [0.7140, 0.2676]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_tensor_zero = torch.zeros((5, 3))\n",
         "print('tensor initialized of shape (2-rows, 3-columns) with a value of zeros in all entries: \\n', my_tensor_zero)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "FpauI8QYMAWn",
-        "outputId": "e1dc070a-cc8b-4754-9a74-882f5eb6a4fe"
+        "id": "y2NPck9nOpaS",
+        "outputId": "ece8922c-a55b-46d8-b4cc-e890bc837f12"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,12 +322,65 @@
             "        [0., 0., 0.],\n",
             "        [0., 0., 0.],\n",
             "        [0., 0., 0.],\n",
-            "        [0., 0., 0.],\n",
-            "        [0., 0., 0.],\n",
-            "        [0., 0., 0.],\n",
-            "        [0., 0., 0.],\n",
-            "        [0., 0., 0.],\n",
             "        [0., 0., 0.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_tensor_ones = torch.ones( (5, 3) )\n",
+        "print('tensor initialized of shape (5-rows, 3-columns) with a value of 1.0 in all entries: \\n', my_tensor_ones)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wFekJ61lOr9d",
+        "outputId": "4811059e-9982-4fc6-a786-47fa0ab148ce"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor initialized of shape (5-rows, 3-columns) with a value of 1.0 in all entries: \n",
+            " tensor([[1., 1., 1.],\n",
+            "        [1., 1., 1.],\n",
+            "        [1., 1., 1.],\n",
+            "        [1., 1., 1.],\n",
+            "        [1., 1., 1.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_tensor_fixed = 25*torch.ones( (5, 3) )\n",
+        "print('tensor initialized of shape (5-rows, 3-columns) with a value of 25 in all entries: \\n', my_tensor_fixed)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HNtps0GYOaVs",
+        "outputId": "9f8941c2-31ac-48a2-fc80-a4cf6d181e4b"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor initialized of shape (5-rows, 3-columns) with a value of 25 in all entries: \n",
+            " tensor([[25., 25., 25.],\n",
+            "        [25., 25., 25.],\n",
+            "        [25., 25., 25.],\n",
+            "        [25., 25., 25.],\n",
+            "        [25., 25., 25.]])\n"
           ]
         }
       ]
@@ -310,15 +409,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ejwZvnnINL_9",
-        "outputId": "6855953c-3369-430d-a5ab-8af4aba1e390"
+        "outputId": "74892285-2df3-4e65-9a1e-5bf30700b881"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "size of the tensor:  torch.Size([10, 3])\n",
+            "size of the tensor:  torch.Size([5, 2])\n",
             "device of the tensor:  cpu\n"
           ]
         }
@@ -336,54 +435,54 @@
     {
       "cell_type": "code",
       "source": [
-        "my_tensor_random = torch.rand((2, 3))\n",
-        "print('random tensor of shape (2-rows, 3-columns): \\n', my_tensor_random)\n",
-        "print('\\n row-wise data exploration\\n-------------------------------\\n')\n",
-        "print('data in the first row: \\n', my_tensor_random[0,:])\n",
-        "print('data in the second row: \\n', my_tensor_random[1,:])\n",
+        "my_tensor_random = torch.rand((2, 4))\n",
+        "print('random tensor of shape (2-rows, 3-columns): \\n\\n', my_tensor_random)\n",
         "print('\\n\\n')\n",
-        "print('\\n column-wise data exploration\\n-------------------------------\\n')\n",
-        "print('data in the first column: \\n', my_tensor_random[:,0])\n",
-        "print('data in the second column: \\n', my_tensor_random[:,1])\n",
-        "print('data in the third column: \\n', my_tensor_random[:,2])\n"
+        "print('Row-wise data exploration\\n-------------------------\\n')\n",
+        "print('data in the first row: ', my_tensor_random[0,:])\n",
+        "print('data in the second row: ', my_tensor_random[1,:])\n",
+        "print('\\n\\n')\n",
+        "print('Column-wise data exploration\\n----------------------------\\n')\n",
+        "print('data in the first column: ', my_tensor_random[:,0])\n",
+        "print('data in the second column: ', my_tensor_random[:,1])\n",
+        "print('data in the third column: ', my_tensor_random[:,2])\n",
+        "print('data in the fourth column: ', my_tensor_random[:,3])\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wIdroTEXUghq",
-        "outputId": "de992797-d260-498e-b23a-75d9e40547ad"
+        "outputId": "aa2e602c-3578-47b2-bf78-f078f3bfc73d"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "random tensor of shape (2-rows, 3-columns): \n",
-            " tensor([[0.5811, 0.0165, 0.4478],\n",
-            "        [0.5884, 0.1151, 0.3492]])\n",
             "\n",
-            " row-wise data exploration\n",
-            "-------------------------------\n",
-            "\n",
-            "data in the first row: \n",
-            " tensor([0.5811, 0.0165, 0.4478])\n",
-            "data in the second row: \n",
-            " tensor([0.5884, 0.1151, 0.3492])\n",
+            " tensor([[0.8073, 0.5409, 0.7992, 0.7677],\n",
+            "        [0.1147, 0.1884, 0.1580, 0.3393]])\n",
             "\n",
             "\n",
             "\n",
+            "Row-wise data exploration\n",
+            "-------------------------\n",
             "\n",
-            " column-wise data exploration\n",
-            "-------------------------------\n",
+            "data in the first row:  tensor([0.8073, 0.5409, 0.7992, 0.7677])\n",
+            "data in the second row:  tensor([0.1147, 0.1884, 0.1580, 0.3393])\n",
             "\n",
-            "data in the first column: \n",
-            " tensor([0.5811, 0.5884])\n",
-            "data in the second column: \n",
-            " tensor([0.0165, 0.1151])\n",
-            "data in the third column: \n",
-            " tensor([0.4478, 0.3492])\n"
+            "\n",
+            "\n",
+            "Column-wise data exploration\n",
+            "----------------------------\n",
+            "\n",
+            "data in the first column:  tensor([0.8073, 0.1147])\n",
+            "data in the second column:  tensor([0.5409, 0.1884])\n",
+            "data in the third column:  tensor([0.7992, 0.1580])\n",
+            "data in the fourth column:  tensor([0.7677, 0.3393])\n"
           ]
         }
       ]
@@ -402,33 +501,34 @@
       "cell_type": "code",
       "source": [
         "my_tensor_random = torch.rand((2,3))\n",
+        "my_tensor_transposed = torch.transpose(my_tensor_random, 0, 1)\n",
         "print('before transpose the tensor was: \\n', my_tensor_random)\n",
         "print('\\n\\n')\n",
-        "print('transposed matrix: \\n', torch.transpose(my_tensor_random, 0, 1))\n"
+        "print('transposed matrix: \\n', my_tensor_transposed)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zNk1gDB6Xckh",
-        "outputId": "6588bf6a-0607-4099-fdf9-1319dfbf780a"
+        "outputId": "8cdda7f8-1a24-4d48-fb1c-7277339fd4e8"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "before transpose the tensor was: \n",
-            " tensor([[0.3648, 0.4795, 0.3670],\n",
-            "        [0.9107, 0.3770, 0.2287]])\n",
+            " tensor([[0.6463, 0.9804, 0.9441],\n",
+            "        [0.4921, 0.6659, 0.0310]])\n",
             "\n",
             "\n",
             "\n",
             "transposed matrix: \n",
-            " tensor([[0.3648, 0.9107],\n",
-            "        [0.4795, 0.3770],\n",
-            "        [0.3670, 0.2287]])\n"
+            " tensor([[0.6463, 0.4921],\n",
+            "        [0.9804, 0.6659],\n",
+            "        [0.9441, 0.0310]])\n"
           ]
         }
       ]
@@ -448,9 +548,7 @@
       "cell_type": "code",
       "source": [
         "# Ex1: Create a tensor object (call it 'tensor1') that corresponds to a 1D vector with a size as follows: height=5\n",
-        "# you should initialize the tensor with zeros (0s) and then display the tensor\n",
-        "tensor1 = torch.zeros((5))\n",
-        "print(tensor1)"
+        "# you should initialize the tensor with zeros (0s) and then display the tensor\n"
       ],
       "metadata": {
         "id": "ZWIdYyG9bLOe",
@@ -474,9 +572,7 @@
       "cell_type": "code",
       "source": [
         "# Ex2: Create a tensor object (call it 'tensor2') that corresponds to a 2D matrix with a size as follows: height=3, width=2\n",
-        "# you should initialize the tensor with values of -15 and then display the tensor\n",
-        "tensor2 = -15*torch.ones( (3,2) )\n",
-        "print(tensor2)"
+        "# you should initialize the tensor with values of -15 and then display the tensor\n"
       ],
       "metadata": {
         "id": "hzyMAU2bboo1",
