--- a/Day22_Convolutional_Neural_Network_CNN.ipynb
+++ b/Day22_Convolutional_Neural_Network_CNN.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/alimoorreza/CS167-Fall24-Notebook-0/blob/main/Day22_Convolutional_Neural_Network_CNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/alimoorreza/CS167-fall24-notes/blob/main/Day22_Convolutional_Neural_Network_CNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -54,15 +54,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jFa7eTujrik7",
-        "outputId": "e57898d1-0f21-4f3f-a233-fdb9b87de8ed"
+        "outputId": "9ea2a24c-06ae-42d3-bd56-321b94faf02d"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Using cuda device\n"
+            "Using cpu device\n"
           ]
         }
       ]
@@ -322,6 +322,326 @@
       "metadata": {
         "id": "ww0jFonlZh4U"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conv2d_first = nn.Conv2d( 8, 16, 3)"
+      ],
+      "metadata": {
+        "id": "VUuyxm8CMvXg"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('weights: ', conv2d_first.weight)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "LH8Gc4_Zc13G",
+        "outputId": "40a3c304-239e-42cd-a9c7-e355a2c80690"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "weights:  Parameter containing:\n",
+            "tensor([[[[ 7.9910e-02,  3.2082e-02, -1.1029e-01],\n",
+            "          [-2.5775e-02, -3.8162e-02, -3.8381e-02],\n",
+            "          [-3.7293e-02,  2.8096e-02, -1.0962e-01]],\n",
+            "\n",
+            "         [[ 4.5965e-02,  6.9738e-02, -7.3119e-02],\n",
+            "          [ 4.7157e-02, -7.6977e-02, -1.4723e-02],\n",
+            "          [ 6.8065e-02,  2.5229e-02, -8.5801e-02]],\n",
+            "\n",
+            "         [[ 5.5367e-03, -7.8380e-02, -2.1040e-02],\n",
+            "          [ 1.7274e-02, -4.8484e-03, -3.3754e-02],\n",
+            "          [ 6.0720e-02,  1.1294e-01,  7.4017e-02]],\n",
+            "\n",
+            "         [[-9.5124e-02,  7.1222e-02,  8.6178e-02],\n",
+            "          [ 7.4566e-02,  2.6395e-02, -3.1194e-02],\n",
+            "          [-2.1198e-02, -1.2082e-02, -5.4218e-03]],\n",
+            "\n",
+            "         [[ 1.0148e-02, -9.4055e-02, -1.1118e-01],\n",
+            "          [-2.0016e-02,  5.1577e-02,  8.8390e-02],\n",
+            "          [-3.3077e-02,  4.4060e-02,  8.3847e-02]],\n",
+            "\n",
+            "         [[ 4.6147e-02, -4.8571e-04, -6.7622e-02],\n",
+            "          [ 2.8525e-02,  2.2756e-02, -6.5952e-02],\n",
+            "          [-7.2235e-02, -3.4742e-02,  2.2554e-02]],\n",
+            "\n",
+            "         [[ 5.7955e-02, -2.8785e-02, -4.3432e-02],\n",
+            "          [-5.9732e-02,  6.1689e-02,  1.0988e-01],\n",
+            "          [ 1.7661e-02,  2.4879e-02, -4.5992e-02]],\n",
+            "\n",
+            "         [[ 7.2278e-02,  8.1398e-02, -4.6270e-02],\n",
+            "          [-4.5068e-02,  9.0619e-03, -9.9641e-02],\n",
+            "          [-9.8856e-03,  1.4575e-02,  5.7828e-02]]],\n",
+            "\n",
+            "\n",
+            "        [[[ 2.4037e-02, -4.6357e-02,  3.2715e-03],\n",
+            "          [-3.0312e-02,  5.4151e-02,  5.8991e-02],\n",
+            "          [-3.0983e-02,  9.5140e-02, -4.2149e-02]],\n",
+            "\n",
+            "         [[ 2.1963e-02, -5.5496e-02, -4.0195e-02],\n",
+            "          [-9.1642e-02, -2.2257e-03, -6.8405e-02],\n",
+            "          [-1.0325e-01, -6.6160e-02, -8.6964e-02]],\n",
+            "\n",
+            "         [[-1.0589e-01, -5.5992e-02,  2.7365e-02],\n",
+            "          [ 2.9093e-04,  7.6785e-02, -8.3747e-02],\n",
+            "          [-8.5949e-02,  9.0970e-02,  2.0730e-02]],\n",
+            "\n",
+            "         [[-7.5879e-02,  4.4920e-03, -7.9337e-02],\n",
+            "          [-5.9070e-02, -5.1205e-02,  4.6344e-03],\n",
+            "          [ 1.0558e-01, -6.9424e-02, -8.6586e-02]],\n",
+            "\n",
+            "         [[ 1.1728e-01, -9.6894e-02, -7.1854e-02],\n",
+            "          [ 8.3208e-02,  1.9891e-02, -8.8367e-02],\n",
+            "          [-2.2294e-02,  5.5120e-02, -6.3498e-02]],\n",
+            "\n",
+            "         [[-1.0049e-01,  7.8596e-02, -1.1692e-01],\n",
+            "          [-5.3275e-02, -2.5768e-02, -6.9115e-02],\n",
+            "          [ 3.3895e-02, -6.4616e-02, -9.6281e-02]],\n",
+            "\n",
+            "         [[-1.1699e-01,  9.4625e-02,  9.7253e-02],\n",
+            "          [ 1.1887e-02,  1.1191e-01, -8.7200e-03],\n",
+            "          [-9.7639e-02,  9.0139e-02,  2.5628e-03]],\n",
+            "\n",
+            "         [[-6.5703e-02,  1.1439e-02,  3.2291e-02],\n",
+            "          [ 5.1225e-02, -4.2204e-02,  4.0297e-04],\n",
+            "          [-9.9070e-02, -1.2714e-02,  2.2429e-02]]],\n",
+            "\n",
+            "\n",
+            "        [[[-7.7902e-02, -7.2517e-02, -1.1532e-01],\n",
+            "          [ 1.0762e-02,  3.1494e-02, -1.0507e-01],\n",
+            "          [-1.4459e-02, -2.3871e-02, -4.5513e-02]],\n",
+            "\n",
+            "         [[-5.2505e-02,  1.5968e-02,  7.9411e-03],\n",
+            "          [-2.7855e-02,  1.0560e-01,  4.8973e-02],\n",
+            "          [ 9.3674e-02, -2.5289e-02, -3.3640e-02]],\n",
+            "\n",
+            "         [[ 1.8709e-02,  1.6592e-02,  1.3262e-03],\n",
+            "          [-1.0317e-01,  5.0441e-02, -8.9123e-02],\n",
+            "          [-1.1356e-01,  3.8211e-02,  1.0642e-01]],\n",
+            "\n",
+            "         [[-4.1759e-02,  8.0100e-02, -7.9822e-02],\n",
+            "          [-4.6512e-02, -6.2451e-02,  8.3176e-02],\n",
+            "          [ 6.8058e-02, -6.7202e-02,  3.1564e-02]],\n",
+            "\n",
+            "         [[ 1.0782e-01, -1.0634e-01,  2.3662e-02],\n",
+            "          [ 1.8364e-02, -1.4843e-02,  9.4079e-02],\n",
+            "          [-5.2281e-02, -5.7473e-02,  4.3731e-02]],\n",
+            "\n",
+            "         [[-1.1617e-01, -4.6198e-02, -2.1032e-02],\n",
+            "          [-8.5980e-02,  6.9549e-02, -2.3142e-02],\n",
+            "          [ 3.7999e-02,  2.6367e-02,  8.8821e-02]],\n",
+            "\n",
+            "         [[ 4.5849e-02,  1.5676e-02,  1.0196e-02],\n",
+            "          [ 3.5717e-03, -3.7794e-02,  4.7098e-02],\n",
+            "          [ 2.6002e-02,  8.8086e-02, -7.7223e-02]],\n",
+            "\n",
+            "         [[ 1.3148e-02,  2.2164e-02, -6.6562e-02],\n",
+            "          [-5.1352e-02,  6.7610e-02, -7.5145e-02],\n",
+            "          [ 7.8598e-02,  8.2885e-02,  6.5179e-02]]],\n",
+            "\n",
+            "\n",
+            "        [[[ 6.8835e-02, -7.2100e-02,  9.9227e-02],\n",
+            "          [ 7.4864e-02,  3.4946e-02,  7.8325e-02],\n",
+            "          [ 1.9418e-02, -2.6932e-03, -6.6480e-02]],\n",
+            "\n",
+            "         [[ 7.8967e-02, -3.4293e-02,  1.1010e-01],\n",
+            "          [ 3.9737e-02, -4.6578e-03,  9.0440e-02],\n",
+            "          [ 7.7960e-02,  3.0028e-02, -9.1816e-02]],\n",
+            "\n",
+            "         [[ 6.3715e-02,  1.2635e-02, -5.5037e-02],\n",
+            "          [-8.1667e-02,  4.0213e-02,  4.5984e-02],\n",
+            "          [-8.4246e-02, -2.9869e-03, -5.1361e-02]],\n",
+            "\n",
+            "         [[ 5.9360e-02, -6.2973e-03, -1.4455e-02],\n",
+            "          [ 4.9635e-02,  6.6760e-02, -5.1828e-02],\n",
+            "          [ 9.8565e-02, -7.8885e-05,  2.1776e-03]],\n",
+            "\n",
+            "         [[-1.2508e-02,  4.6995e-02, -8.6089e-02],\n",
+            "          [-1.7051e-02,  8.4389e-02, -1.0430e-01],\n",
+            "          [ 9.4706e-02, -1.0091e-01, -8.6989e-02]],\n",
+            "\n",
+            "         [[ 1.1307e-01, -1.1434e-01, -5.7333e-02],\n",
+            "          [-2.1455e-02, -8.0590e-02, -1.0188e-01],\n",
+            "          [-5.6553e-02, -9.4074e-02, -4.7832e-02]],\n",
+            "\n",
+            "         [[-7.0000e-02,  2.5415e-02,  3.5118e-02],\n",
+            "          [ 8.0350e-02, -3.7454e-02,  1.0448e-01],\n",
+            "          [-8.0928e-02, -3.1712e-02, -6.2300e-02]],\n",
+            "\n",
+            "         [[ 9.9404e-02, -6.6547e-03, -3.1756e-02],\n",
+            "          [ 6.3574e-02,  6.5025e-02,  1.1731e-02],\n",
+            "          [ 3.6294e-02, -4.9612e-02,  1.7355e-02]]],\n",
+            "\n",
+            "\n",
+            "        [[[ 1.0035e-01,  5.1518e-02,  8.1677e-02],\n",
+            "          [-1.2543e-02,  3.8800e-02,  5.7984e-02],\n",
+            "          [ 1.0666e-01, -3.9904e-02,  1.3470e-02]],\n",
+            "\n",
+            "         [[ 7.8787e-02,  2.0638e-02, -4.3396e-02],\n",
+            "          [ 1.0908e-01,  2.4253e-02, -3.4301e-02],\n",
+            "          [-2.8227e-03, -6.9960e-02, -6.8583e-02]],\n",
+            "\n",
+            "         [[ 5.3178e-02, -1.4573e-02,  2.3147e-03],\n",
+            "          [ 3.3276e-02, -5.6293e-02,  1.0859e-01],\n",
+            "          [-5.1680e-02, -7.3896e-02, -9.6603e-02]],\n",
+            "\n",
+            "         [[-1.0480e-01, -2.8091e-04,  5.0118e-02],\n",
+            "          [-1.0152e-01, -6.3616e-02,  1.6834e-02],\n",
+            "          [ 1.7059e-02,  4.5120e-02,  7.6886e-02]],\n",
+            "\n",
+            "         [[-5.2104e-02,  1.1198e-01, -7.3233e-02],\n",
+            "          [ 6.3547e-02,  6.3278e-02,  5.8112e-02],\n",
+            "          [ 1.0839e-01, -2.1350e-02, -5.3791e-02]],\n",
+            "\n",
+            "         [[ 5.1572e-02,  1.0732e-02,  6.5218e-02],\n",
+            "          [-1.0394e-02, -9.6204e-02, -3.4380e-02],\n",
+            "          [ 8.3775e-03, -1.0629e-01, -4.6021e-02]],\n",
+            "\n",
+            "         [[ 1.2681e-02, -3.1660e-02,  4.9835e-02],\n",
+            "          [-6.9333e-02, -1.0000e-01,  1.1854e-02],\n",
+            "          [-5.1037e-02,  2.1633e-02,  1.9413e-02]],\n",
+            "\n",
+            "         [[ 3.6214e-02, -2.4473e-02, -9.4922e-02],\n",
+            "          [ 4.5855e-02,  7.2010e-02, -2.8123e-02],\n",
+            "          [ 6.6230e-02, -1.0360e-01,  7.9617e-03]]],\n",
+            "\n",
+            "\n",
+            "        [[[-6.2326e-02, -8.3843e-02,  8.2348e-02],\n",
+            "          [-4.9425e-02, -7.8226e-02, -1.9558e-02],\n",
+            "          [-6.5050e-02, -9.5316e-02, -9.2197e-02]],\n",
+            "\n",
+            "         [[ 1.3914e-02, -7.9782e-02, -4.7867e-02],\n",
+            "          [ 1.0909e-02, -8.0258e-02, -1.9669e-02],\n",
+            "          [ 8.7309e-04,  8.2434e-02,  5.4246e-02]],\n",
+            "\n",
+            "         [[ 4.9440e-02,  9.0123e-02,  6.6031e-02],\n",
+            "          [ 2.2612e-02,  6.7161e-02,  1.1070e-01],\n",
+            "          [ 7.2517e-02,  1.0104e-01,  1.0422e-01]],\n",
+            "\n",
+            "         [[ 8.0024e-02,  5.0377e-02,  8.0008e-02],\n",
+            "          [-5.8036e-02,  7.0557e-02,  1.1511e-01],\n",
+            "          [ 1.1623e-02,  7.9539e-02,  4.5803e-03]],\n",
+            "\n",
+            "         [[-1.0524e-01, -1.0523e-01, -1.1134e-01],\n",
+            "          [ 1.0975e-01,  4.3975e-02, -8.1810e-02],\n",
+            "          [ 8.7185e-02,  3.9701e-02, -1.1651e-01]],\n",
+            "\n",
+            "         [[-1.1551e-02, -1.0321e-01, -7.9920e-02],\n",
+            "          [-9.3979e-02,  8.0185e-02, -1.2623e-02],\n",
+            "          [-1.0424e-01,  1.2851e-02, -3.8372e-02]],\n",
+            "\n",
+            "         [[ 1.1215e-01, -1.0768e-01,  2.3293e-02],\n",
+            "          [-2.7398e-02,  1.2814e-02,  1.0188e-01],\n",
+            "          [ 1.0662e-01,  8.1589e-02, -8.6704e-02]],\n",
+            "\n",
+            "         [[ 1.1711e-01,  2.3232e-03,  1.4004e-02],\n",
+            "          [ 2.6598e-02, -5.7490e-02, -9.6415e-03],\n",
+            "          [ 1.6608e-02, -7.3072e-02, -1.3099e-02]]],\n",
+            "\n",
+            "\n",
+            "        [[[-2.1764e-02, -5.9593e-02,  5.0059e-02],\n",
+            "          [ 1.0216e-01, -7.6534e-02, -5.9439e-02],\n",
+            "          [ 5.8944e-02,  9.2516e-02,  8.8225e-02]],\n",
+            "\n",
+            "         [[ 4.3357e-02,  7.1044e-02,  1.3501e-02],\n",
+            "          [ 1.0462e-02, -5.1256e-02,  9.3683e-02],\n",
+            "          [ 7.2886e-02,  1.2848e-03, -1.3412e-03]],\n",
+            "\n",
+            "         [[-6.2064e-02,  7.5857e-02, -3.0464e-02],\n",
+            "          [-3.5368e-02,  1.0459e-01, -2.7879e-02],\n",
+            "          [-8.4208e-02, -2.2983e-03,  2.8152e-02]],\n",
+            "\n",
+            "         [[ 3.0946e-03, -3.9795e-04, -4.0994e-02],\n",
+            "          [ 9.8535e-02, -3.4499e-03, -8.2095e-03],\n",
+            "          [ 4.9607e-02,  3.6436e-03, -5.3262e-02]],\n",
+            "\n",
+            "         [[-9.7858e-02,  5.1014e-02, -1.1458e-01],\n",
+            "          [ 8.1233e-03,  2.7326e-02,  7.6910e-02],\n",
+            "          [ 7.6565e-03, -1.8279e-02, -8.4289e-02]],\n",
+            "\n",
+            "         [[ 1.1134e-01,  1.0375e-03, -9.9136e-02],\n",
+            "          [ 8.5939e-02,  1.6568e-02, -7.5573e-02],\n",
+            "          [ 7.9606e-02, -2.2193e-02,  1.0504e-01]],\n",
+            "\n",
+            "         [[-4.0895e-02,  3.5778e-02,  9.5048e-02],\n",
+            "          [ 8.9830e-02,  5.7348e-02, -1.0980e-01],\n",
+            "          [-4.1452e-02,  1.1722e-01,  9.6205e-02]],\n",
+            "\n",
+            "         [[ 2.0426e-03, -9.4468e-02,  3.6537e-02],\n",
+            "          [ 1.8123e-02,  3.5411e-02, -1.7971e-02],\n",
+            "          [-1.1417e-01,  6.0463e-02, -8.1402e-02]]],\n",
+            "\n",
+            "\n",
+            "        [[[-9.0916e-02, -1.0876e-01,  5.1969e-02],\n",
+            "          [-6.4290e-02, -8.7101e-02,  7.3649e-02],\n",
+            "          [ 9.5267e-02,  6.5309e-02,  5.6087e-02]],\n",
+            "\n",
+            "         [[ 1.3398e-02,  4.1816e-02,  5.6789e-02],\n",
+            "          [-2.1672e-02,  6.5452e-03,  9.6186e-02],\n",
+            "          [-4.9125e-02,  3.7203e-02, -6.7917e-02]],\n",
+            "\n",
+            "         [[ 1.0529e-01, -8.8711e-02,  7.2362e-02],\n",
+            "          [ 1.0418e-01, -7.5198e-02,  1.1897e-02],\n",
+            "          [ 8.5657e-02, -3.4684e-02, -7.4025e-02]],\n",
+            "\n",
+            "         [[-1.0720e-01, -1.0175e-01, -1.1413e-01],\n",
+            "          [-2.4084e-02,  5.8072e-02, -4.8792e-02],\n",
+            "          [-7.7822e-02,  9.2699e-02,  2.7617e-02]],\n",
+            "\n",
+            "         [[ 6.9665e-02,  6.9533e-03, -3.9837e-02],\n",
+            "          [-1.0138e-01, -3.0336e-02, -9.5182e-02],\n",
+            "          [-9.1749e-02,  2.1106e-02, -8.8797e-02]],\n",
+            "\n",
+            "         [[-6.7520e-03,  2.5747e-02,  9.6121e-02],\n",
+            "          [-4.1788e-02, -4.8156e-02,  1.2495e-02],\n",
+            "          [ 1.0635e-01, -8.0272e-02, -9.9207e-02]],\n",
+            "\n",
+            "         [[ 8.3232e-02,  4.5177e-02, -2.3032e-02],\n",
+            "          [-1.8431e-02, -2.2871e-02, -9.9594e-02],\n",
+            "          [-4.7049e-02, -5.3697e-02, -4.2652e-03]],\n",
+            "\n",
+            "         [[ 1.3454e-02, -4.6866e-04,  1.5354e-02],\n",
+            "          [ 1.0447e-01,  2.9004e-04,  1.0536e-01],\n",
+            "          [-1.0125e-01,  8.3639e-02, -4.6829e-02]]]], requires_grad=True)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('shape of my filters in the first CNN layer: ', conv2d_first.weight.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cfH7Eu4wdE0P",
+        "outputId": "c22fc1e7-aaab-4df3-bfb4-3f9c1aa1b4a9"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "shape of my filters in the first CNN layer:  torch.Size([16, 8, 3, 3])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
