--- a/Day25a_LLM_sentiment_classfication.ipynb
+++ b/Day25a_LLM_sentiment_classfication.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPj0wqRDEmbaH7/8WQgHMgD",
+      "authorship_tag": "ABX9TyMLdDR1djQ4X7rytmYbm4dE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,36 +44,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "n0CmiA-R3Tk7",
-        "outputId": "1acd2b90-3298-417c-c496-4086a8b76824"
+        "outputId": "b1bd4b3a-2e24-4c47-bead-9566efab15c1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: transformers in /usr/local/lib/python3.10/dist-packages (4.40.1)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from transformers) (3.14.0)\n",
-            "Requirement already satisfied: huggingface-hub<1.0,>=0.19.3 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.20.3)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (1.25.2)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from transformers) (24.0)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (6.0.1)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (2023.12.25)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from transformers) (2.31.0)\n",
-            "Requirement already satisfied: tokenizers<0.20,>=0.19 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.19.1)\n",
-            "Requirement already satisfied: safetensors>=0.4.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.4.3)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.10/dist-packages (from transformers) (4.66.2)\n",
-            "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (2023.6.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (4.11.0)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.3.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.7)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2.0.7)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2024.2.2)\n"
+            "Requirement already satisfied: transformers in /usr/local/lib/python3.10/dist-packages (4.46.2)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from transformers) (3.16.1)\n",
+            "Requirement already satisfied: huggingface-hub<1.0,>=0.23.2 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.26.2)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (1.26.4)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from transformers) (24.2)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (6.0.2)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (2024.9.11)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from transformers) (2.32.3)\n",
+            "Requirement already satisfied: safetensors>=0.4.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.4.5)\n",
+            "Requirement already satisfied: tokenizers<0.21,>=0.20 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.20.3)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.10/dist-packages (from transformers) (4.66.6)\n",
+            "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (2024.10.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (4.12.2)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.4.0)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2.2.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2024.8.30)\n"
           ]
         }
       ],
@@ -96,7 +96,7 @@
       "source": [
         "from transformers import pipeline\n",
         "sentiment_nlp_model = pipeline(\"sentiment-analysis\")\n",
-        "input_sentences = [\"Reza loves machine learning\", \"Reza hates operating system\", \"Reza is talking and talking\"]\n",
+        "input_sentences = [\"Professor X loves machine learning\", \"Professor X hates operating system\", \"Professor X is talking and talking\"]\n",
         "\n",
         "for ii in range(len(input_sentences)):\n",
         "  result = sentiment_nlp_model(input_sentences[ii])[0]\n",
@@ -107,15 +107,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Hc5LKqp36rt",
-        "outputId": "87fffde5-0119-44a4-b120-03b56991ec48"
+        "outputId": "9fe947c6-bce7-4737-d819-ebb4f84a1304"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "No model was supplied, defaulted to distilbert/distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert/distilbert-base-uncased-finetuned-sst-2-english).\n",
+            "No model was supplied, defaulted to distilbert/distilbert-base-uncased-finetuned-sst-2-english and revision 714eb0f (https://huggingface.co/distilbert/distilbert-base-uncased-finetuned-sst-2-english).\n",
             "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
           ]
         },
@@ -123,9 +123,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "sentiment for 'Reza loves machine learning' is: {'label': 'POSITIVE', 'score': 0.9985209107398987}\n",
-            "sentiment for 'Reza hates operating system' is: {'label': 'NEGATIVE', 'score': 0.9989462494850159}\n",
-            "sentiment for 'Reza is talking and talking' is: {'label': 'POSITIVE', 'score': 0.9962618947029114}\n"
+            "sentiment for 'Professor X loves machine learning' is: {'label': 'POSITIVE', 'score': 0.9985872507095337}\n",
+            "sentiment for 'Professor X hates operating system' is: {'label': 'NEGATIVE', 'score': 0.9990214109420776}\n",
+            "sentiment for 'Professor X is talking and talking' is: {'label': 'POSITIVE', 'score': 0.9979986548423767}\n"
           ]
         }
       ]
@@ -150,13 +150,13 @@
         "\n",
         "|                                    | Sentiment Type      \n",
         "|------------------------------------|-----------------\n",
-        "| \"Reza loves machine learning\"      | +ve sentiment  \n",
-        "| \"Reza hates operating system\"      | -ve sentiment      \n",
-        "| \"Reza is talking and talking\".     | +ve sentiment   \n",
-        "| ?                                  | -ve sentiment\n",
-        "| ?                                  | +ve sentiment\n",
-        "| ?                                  | -ve sentiment\n",
-        "| ?                                  | +ve sentiment\n",
+        "| \"Professor X loves machine learning\"      | +ve sentiment  \n",
+        "| \"Professor X hates operating system\"      | -ve sentiment      \n",
+        "| \"Professor X is talking and talking\".     | +ve sentiment   \n",
+        "| ?                                         | -ve sentiment\n",
+        "| ?                                         | +ve sentiment\n",
+        "| ?                                         | -ve sentiment\n",
+        "| ?                                         | +ve sentiment\n",
         "\n",
         "2. Try out the __BERT__ pre-trained model on these additional input sentences.\n",
         "3. Report the accuracy of your sentences."
