--- a/Day25a_LLM_sentiment_classfication.ipynb
+++ b/Day25a_LLM_sentiment_classfication.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLdDR1djQ4X7rytmYbm4dE",
+      "authorship_tag": "ABX9TyMMe6H8hPTkiMT9DH7yZywD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,6 +96,8 @@
       "source": [
         "from transformers import pipeline\n",
         "sentiment_nlp_model = pipeline(\"sentiment-analysis\")\n",
+        "# By default, the LLM for sentiment analysis is DistilBERT: distilbert-base-uncased-finetuned-sst-2-english\n",
+        "\n",
         "input_sentences = [\"Professor X loves machine learning\", \"Professor X hates operating system\", \"Professor X is talking and talking\"]\n",
         "\n",
         "for ii in range(len(input_sentences)):\n",
@@ -107,9 +109,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Hc5LKqp36rt",
-        "outputId": "9fe947c6-bce7-4737-d819-ebb4f84a1304"
+        "outputId": "8c125089-74fc-4b75-d271-e5527e4a0c6b"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +160,7 @@
         "| ?                                         | -ve sentiment\n",
         "| ?                                         | +ve sentiment\n",
         "\n",
-        "2. Try out the __BERT__ pre-trained model on these additional input sentences.\n",
+        "2. Try out the __DistilBERT__ pre-trained model on these additional input sentences.\n",
         "3. Report the accuracy of your sentences."
       ],
       "metadata": {
