--- a/Day25a_LLM_sentiment_classfication.ipynb
+++ b/Day25a_LLM_sentiment_classfication.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMe6H8hPTkiMT9DH7yZywD",
+      "authorship_tag": "ABX9TyMhb5aL9sTYe/3LJOavZR0q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -85,7 +85,10 @@
       "cell_type": "markdown",
       "source": [
         "#Sentiment Analysis Model using Transformer-based large language model (LLM)\n",
-        ">'many-to-one' mapping machine learning task"
+        ">**many-to-one** mapping machine learning task:\n",
+        "<div>\n",
+        "<img src=\"https://analytics.drake.edu/~reza/teaching/cs167_fall24/notes/images/many_to_one_ML_task.png?raw=1\" width=200/>\n",
+        "</div>"
       ],
       "metadata": {
         "id": "oRTe6v-v5l9j"
@@ -111,7 +114,7 @@
         "id": "9Hc5LKqp36rt",
         "outputId": "8c125089-74fc-4b75-d271-e5527e4a0c6b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
